--- a/src/templates/Home/styles.css
+++ b/src/templates/Home/styles.css
@@ -10,5 +10,12 @@
   min-height: 100px;
   display: flex;
   align-items: flex-end;
+}
 
+.search-container {
+  margin-bottom: 30px;
+}
+
+.search-container h1{
+  margin-bottom: 30px;
 }
